...
    );
  }

  void handleSubmitExpense(int categoryId, String categoryName, String text) async {
    double? amount = double.tryParse(text);
    if (amount == null) {
      showToast(context, 'Invalid expense');
    } else {
      final expenseProvider = context.read<ExpenseProvider>();
      final settingsProvider = context.read<SettingsProvider>();
      final bool developerMode = settingsProvider.getConfig(SettingsName.developerMode) ?? false;

      final int memoryBefore = expenseProvider.expenses.length;
...
