...
                                ),
                                const SizedBox(height: 30),
                                Row(
                                  children: [
                                    Expanded(
                                      child: CoolButton(
                                        text: 'Save',
                                        onPressed: () async {
                                          if (!_formKey.currentState!.validate()) {
                                            return;
                                          }
                                          String newCatName = _categoryNameTextController.text;
                                          int catId = widget.category.id;
...
